// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emergency Alarm behavior Renders correctly 1`] = `
<WithStyles(ForwardRef(IconButton))
  color="inherit"
  id="alarm-btn"
  onClick={[Function]}
>
  <NotificationsActiveIcon />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`Renders correctly 1`] = `
<WithStyles(ForwardRef(IconButton))
  color="secondary"
  id="alarm-btn"
  onClick={[Function]}
>
  <NotificationsActiveIcon />
</WithStyles(ForwardRef(IconButton))>
`;
